--- a/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/index.html
@@ -14,20 +14,40 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
+
 <body>
 
-  Get insights that help your business grow.
+  <div class="container">
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
+    <div class="content-container">
+      <div class="text-container">
+        <h2 class="title">Get <span class="purple">insights</span> that help your business grow.</h2>
+        <p class="text">
+          Discover the benefits of data analytics and make better decisions regarding revenue, customer
+          experience, and overall efficiency.
+        </p>
+      </div>
 
-  10k+ companies
-  314 templates
-  12m+ queries
+      <div class="flex">
+        <div class="content">
+          <h3 class="stats">10k+</h3> <p class="headings">companies</p>
+        </div>
+        <div class="content">
+          <h3 class="stats">314 </h3> <p class="headings">templates</p>
+        </div>
+        <div class="content">
+          <h3 class="stats">12m+</h3> <p class="headings">queries</p>
+        </div>
+      </div>
+      <div class="image"></div>
+    </div>
+
+  </div>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Joe Corrales</a>.
   </div>
+
 </body>
 </html>
